generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

// ---------------------------------------------------------------------------
// TransitOps database schema
// ---------------------------------------------------------------------------
// This schema intentionally keeps the required hackathon entities only:
// Roles, Users, Vehicles, Drivers, Trips, Maintenance Logs, Fuel Logs,
// and Expenses.

enum RoleName {
  SUPER_ADMIN
  FLEET_MANAGER
  DRIVER
  SAFETY_OFFICER
  FINANCIAL_ANALYST
}

enum VehicleStatus {
  AVAILABLE
  ON_TRIP
  IN_SHOP
  RETIRED
}

enum DriverStatus {
  AVAILABLE
  ON_TRIP
  OFF_DUTY
  SUSPENDED
}

enum TripStatus {
  DRAFT
  DISPATCHED
  COMPLETED
  CANCELLED
}

enum MaintenanceStatus {
  OPEN
  CLOSED
}

enum ExpenseCategory {
  TOLL
  PERMIT
  INSURANCE
  FINE
  PARKING
  MAINTENANCE
  OTHER
}

model Role {
  id          String   @id @default(uuid()) @db.Uuid
  name        RoleName @unique
  description String?  @db.Text
  users       User[]
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  @@map("roles")
}

model User {
  id             String   @id @default(uuid()) @db.Uuid
  roleId         String   @map("role_id") @db.Uuid
  role           Role     @relation(fields: [roleId], references: [id], onDelete: Restrict)
  fullName       String   @map("full_name")
  email          String   @unique
  hashedPassword String   @map("hashed_password")
  isActive       Boolean  @default(true) @map("is_active")
  createdTrips   Trip[]   @relation("UserCreatedTrips")
  createdAt      DateTime @default(now()) @map("created_at")
  updatedAt      DateTime @updatedAt @map("updated_at")

  @@index([roleId])
  @@map("users")
}

model Vehicle {
  id                 String           @id @default(uuid()) @db.Uuid
  registrationNumber String           @unique @map("registration_number")
  model              String
  type               String
  maxLoadCapacity    Decimal          @map("max_load_capacity") @db.Decimal(12, 2)
  odometer           Decimal          @default(0) @db.Decimal(12, 2)
  acquisitionCost    Decimal          @map("acquisition_cost") @db.Decimal(14, 2)
  status             VehicleStatus    @default(AVAILABLE)
  region             String?
  trips              Trip[]
  maintenanceLogs    MaintenanceLog[]
  fuelLogs           FuelLog[]
  expenses           Expense[]
  createdAt          DateTime         @default(now()) @map("created_at")
  updatedAt          DateTime         @updatedAt @map("updated_at")

  @@index([status])
  @@index([type])
  @@index([region])
  @@map("vehicles")
}

model Driver {
  id              String       @id @default(uuid()) @db.Uuid
  fullName        String       @map("full_name")
  licenseNumber   String       @unique @map("license_number")
  licenseCategory String       @map("license_category")
  licenseExpiry   DateTime     @map("license_expiry") @db.Date
  contactNumber   String       @map("contact_number")
  safetyScore     Int          @default(100) @map("safety_score")
  status          DriverStatus @default(AVAILABLE)
  trips           Trip[]
  createdAt       DateTime     @default(now()) @map("created_at")
  updatedAt       DateTime     @updatedAt @map("updated_at")

  @@index([status])
  @@index([licenseExpiry])
  @@map("drivers")
}

model Trip {
  id              String     @id @default(uuid()) @db.Uuid
  vehicleId       String     @map("vehicle_id") @db.Uuid
  vehicle         Vehicle    @relation(fields: [vehicleId], references: [id], onDelete: Restrict)
  driverId        String     @map("driver_id") @db.Uuid
  driver          Driver     @relation(fields: [driverId], references: [id], onDelete: Restrict)
  createdById     String     @map("created_by_id") @db.Uuid
  createdBy       User       @relation("UserCreatedTrips", fields: [createdById], references: [id], onDelete: Restrict)
  source          String
  destination     String
  cargoWeight     Decimal    @map("cargo_weight") @db.Decimal(12, 2)
  plannedDistance Decimal    @map("planned_distance") @db.Decimal(12, 2)
  actualDistance  Decimal?   @map("actual_distance") @db.Decimal(12, 2)
  revenue         Decimal?   @db.Decimal(14, 2)
  status          TripStatus @default(DRAFT)
  finalOdometer   Decimal?   @map("final_odometer") @db.Decimal(12, 2)
  dispatchedAt    DateTime?  @map("dispatched_at")
  completedAt     DateTime?  @map("completed_at")
  cancelledAt     DateTime?  @map("cancelled_at")
  fuelLogs        FuelLog[]
  createdAt       DateTime   @default(now()) @map("created_at")
  updatedAt       DateTime   @updatedAt @map("updated_at")

  @@index([vehicleId])
  @@index([driverId])
  @@index([createdById])
  @@index([status])
  @@map("trips")
}

model MaintenanceLog {
  id          String            @id @default(uuid()) @db.Uuid
  vehicleId   String            @map("vehicle_id") @db.Uuid
  vehicle     Vehicle           @relation(fields: [vehicleId], references: [id], onDelete: Restrict)
  description String            @db.Text
  cost        Decimal           @default(0) @db.Decimal(14, 2)
  status      MaintenanceStatus @default(OPEN)
  startedAt   DateTime          @map("started_at") @db.Date
  completedAt DateTime?         @map("completed_at") @db.Date
  createdAt   DateTime          @default(now()) @map("created_at")
  updatedAt   DateTime          @updatedAt @map("updated_at")

  @@index([vehicleId])
  @@index([status])
  @@map("maintenance_logs")
}

model FuelLog {
  id        String   @id @default(uuid()) @db.Uuid
  vehicleId String   @map("vehicle_id") @db.Uuid
  vehicle   Vehicle  @relation(fields: [vehicleId], references: [id], onDelete: Restrict)
  tripId    String?  @map("trip_id") @db.Uuid
  trip      Trip?    @relation(fields: [tripId], references: [id], onDelete: SetNull)
  liters    Decimal  @db.Decimal(12, 2)
  cost      Decimal  @db.Decimal(14, 2)
  logDate   DateTime @map("log_date") @db.Date
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@index([vehicleId])
  @@index([tripId])
  @@index([logDate])
  @@map("fuel_logs")
}

model Expense {
  id          String          @id @default(uuid()) @db.Uuid
  vehicleId   String          @map("vehicle_id") @db.Uuid
  vehicle     Vehicle         @relation(fields: [vehicleId], references: [id], onDelete: Restrict)
  category    ExpenseCategory
  amount      Decimal         @db.Decimal(14, 2)
  expenseDate DateTime        @map("expense_date") @db.Date
  description String?         @db.Text
  createdAt   DateTime        @default(now()) @map("created_at")
  updatedAt   DateTime        @updatedAt @map("updated_at")

  @@index([vehicleId])
  @@index([category])
  @@index([expenseDate])
  @@map("expenses")
}

model AppSetting {
  id           String   @id @default(uuid()) @db.Uuid
  scope        String   @unique @default("GLOBAL")
  depotName    String   @map("depot_name")
  currency     String   @default("INR")
  distanceUnit String   @default("kilometers") @map("distance_unit")
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  @@map("app_settings")
}
